--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "vue": "^3.5.22"
   },
   "devDependencies": {
+    "@eslint/js": "^9.38.0",
     "@vitejs/plugin-vue": "^6.0.1",
+    "eslint": "^9.38.0",
+    "eslint-plugin-vue": "^10.5.1",
+    "globals": "^16.4.0",
     "vite": "^7.1.7",
     "vite-plugin-vue-devtools": "^8.0.2"
   }
