--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@eslint/js": "^9.38.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "eslint": "^9.38.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-vue": "^10.5.1",
     "globals": "^16.4.0",
     "prettier": "3.6.2",
