--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
+    "lint": "eslint --ext .js,.vue --fix src",
     "format": "prettier .  --write"
   },
   "dependencies": {
     "vue": "^3.5.22"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.4.0",
     "@eslint/js": "^9.38.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "eslint": "^9.38.0",
