--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint --ext .js,.vue --fix src",
+    "lintfix": "eslint --ext .js,.vue --fix src",
+    "lint": "eslint --ext .js,.vue src",
     "format": "prettier .  --write"
   },
   "dependencies": {
