--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "format": "prettier .  --write"
   },
   "dependencies": {
-    "vue": "^3.5.22"
+    "vue": "^3.5.22",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@eslint/compat": "^1.4.0",
